--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<meta http-equiv="Refresh" content="0; url='https://liquid-sunset-over-stone.github.io/hub/'" />
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Refresh" content="0; url='https://liquid-sunset-over-stone.github.io/hub/'" /></head>
+</html>
