--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; url='https://liquid-sunset-over-stone.github.io/hub/'" /></head>
+<meta http-equiv="Refresh" content="0; url='https://liquid-sunset-over-stone.github.io/general_page/'" /></head>
 </html>
